[gd_scene load_steps=3 format=3 uid="uid://c0dghebk37oqr"]

[ext_resource type="Theme" uid="uid://dm4udtrkpx6xu" path="res://src/ui/theme.tres" id="1_dfcxs"]
[ext_resource type="Script" path="res://src/ui/health_bar.gd" id="2_vtr6v"]

[node name="HealthBar" type="ProgressBar"]
custom_minimum_size = Vector2(100, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -4.0
offset_right = 50.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme = ExtResource("1_dfcxs")
value = 75.0
show_percentage = false
script = ExtResource("2_vtr6v")

[node name="BlinkTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 0.1
one_shot = true

[connection signal="timeout" from="BlinkTimer" to="." method="stop_blink"]
